@@ -9,7 +9,7 @@ distname=freqbot
 distver=1.0.99
 rev=`tools/getrev 2>/dev/null`
 dist=$(distname)-$(distver).$(rev)
-tarballtg=..
+tarballdir=..
 
 build: doc lang templates tools
 	echo Building $(dist)
@@ -21,6 +21,7 @@ clean:
 	#Cleaning
 	$(MAKE) -C doc clean
 	find . -name "*~" -delete
+	find . -name "*.pyc" -delete
 
 depends: tools/depends.py
 	python tools/depends.py
@@ -49,8 +50,8 @@ install:
 	cat src/kernel/freq.py | sed s/self.getRev\(\)/\'$(rev)\'/ >$(prefix)/share/freq/src/kernel/freq.py
 	rm -rf `find $(prefix)/share/freq -name ".svn"`
 	chown -R root:wheel $(prefix)/share/freq
-	find $(prefix) -name "*.pyc" -delete
-	find $(prefix) -name "*~" -delete
+	find $(prefix)/share/freq -name "*.pyc" -delete
+	find $(prefix)/share/freq -name "*~" -delete
 	
 	#rc script
 	$(INSTALLX) tools/freqbot $(prefix)/etc/rc.d/freq
@@ -74,12 +75,16 @@ userdel:
 	pw userdel -n $(botuser)
 
 tarball:
-	rm -rf $(tarballtg)/$(dist)
-	rm -f $(tarballtg)/$(dist).tar.bz2
-	cp -r . $(tarballtg)/$(dist)
-	find $(tarballtg)/$(dist) -name "*~" -delete
-	find $(tarballtg)/$(dist) -name "freq.conf" -delete
-	find $(tarballtg)/$(dist) -name "*.pyc" -delete
-	find $(tarballtg)/$(dist) -name ".svn" -delete
-	tar -C $(tarballtg) -cjf $(tarballtg)/$(dist).tar.bz2 $(dist)
-	rm -rf $(tarballtg)/$(dist)
+	rm -rf $(tarballdir)/$(dist)
+	rm -f $(tarballdir)/$(dist).tar.bz2
+	cp -r . $(tarballdir)/$(dist)
+	find $(tarballdir)/$(dist) -name "*~" -delete
+	find $(tarballdir)/$(dist) -name "freq.conf" -delete
+	find $(tarballdir)/$(dist) -name "config.py" -delete
+	find $(tarballdir)/$(dist) -name "*.pyc" -delete
+	find $(tarballdir)/$(dist) -name ".svn" -delete
+	tar -C $(tarballdir) -cjf $(tarballdir)/$(dist).tar.bz2 $(dist)
+	rm -rf $(tarballdir)/$(dist)
+
+version:
+	echo $(dist)
