@@ -1,4 +1,4 @@
-freQ-bot written by Burdakov Daniel <kreved@kreved.org>
+freQ is a Jabber bot, written by Burdakov Daniel <kreved@kreved.org>
 
 You need have installed
 
@@ -7,12 +7,14 @@ You need have installed
         * py-TwistedWords
         * py-TwistedWeb
 
-   to start bot.
+   to start bot. (run "python ./tools/depends.py" to check if you have installed all dependencies)
 
-1) now you can install freQ Jabber Bot on your system with command:
+
+
+1) You can install FreQ on your system using command:
    make install (or gmake install)
 
-   you need cp /usr/local/etc/freq.conf.example to /usr/local/etc/freq.conf and edit it..
+   you need cp /usr/local/etc/freq.conf.example to /usr/local/etc/freq.conf and edit it...
 
    add freq_enable="YES" to your rc.conf 
 
@@ -22,10 +24,10 @@ You need have installed
 
    to start bot.
 
-2) or, if you can't (or don't want) install bot, you can start it immediately..
+2) or, if you can't (or don't want) install bot, you can run it directly...
 
    copy freq.conf.example to freq.conf and edit it..
 
    Start bot with command like this:
 
-     python start.py /path/to/freq.conf
+      python start.py /path/to/freq.conf
