@@ -2,7 +2,7 @@ def set_help_handler(t, s, p):
  if p.count('='):
   n = p.find('=')
   k = p[:n].strip()
-  v = u'%s\n\n---written by---\n%s\n' % (p[n+1:].strip(), s.jid)
+  v = u'%s\n' % (p[n+1:].strip(), )
   v = v.encode('utf8')
   fn = u'doc/help/%s-%s.txt' % (k, lang.getLang(s.jid))
   fp = file(fn.encode('utf8'), 'w')
