@@ -1,7 +1,7 @@
 def lang_set_msg_handler(t, s, p):
  q = re.search('^(..)\ ([^\ \=]+)\=(.+)$', p, re.DOTALL)
  if not q:
-  s.syntax(t, "lang_set_msg")
+  s.syntax(t, 'lang_set_msg')
   return
  q = q.groups()
  language = q[0]
@@ -9,7 +9,7 @@ def lang_set_msg_handler(t, s, p):
  value = q[2]
  if language in lang.languages():
   lang.set(msg, language, value)
-  s.lmsg(t, "lang_msg_saved")
+  s.lmsg(t, 'lang_msg_saved')
  else:
   s.lmsg(t, 'lang_not_found', language)
 
